change some info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+      
+        <h1 id="heading">WELCOME TO FIRST JSON PROJECT <i>i.e</i> WEATHER APP App</h1>
         <div class="search-container">
             <input type="text" id="locationInput" placeholder="Enter location (city or ZIP code)">
             <button id="getWeatherBtn">Get Weather</button>
